# er-wait-app

./: .gitignore  Readme.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  langgraph.json  pyproject.toml
app/: __init__.py  fetch.py  scheduler.py  sqlite_db.py
app/ahs_scraper/: scheduler.py
app/database/: read_repository.py  sqlite_db.py  write_repository.py
app/fastapi/: server.py
app/geocoding/: geocoding.py  nrcan_geolocation.py
app/triage_agent/: Readme.md  graph.py  model.py  nodes.py  state.py
app/triage_agent/utils/: distance.py  fetch.py  nrcan_geolocation.py
frontend/: ui.py
triage_agent/: Readme.md  agent.py  state.py
