[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "er-wait-app"
version = "0.1.0"
description = "An app to track or predict ER wait times"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-google-genai",
    "playwright",
    "beautifulsoup4",
    "tenacity",
    "python-dotenv",
    "pydantic",
    "streamlit",
    "requests",
    "apscheduler",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

# --- THE CRITICAL FIX FOR YOUR FOLDER SPLIT ---
[tool.setuptools.packages.find]
where = ["."]  # Tells setuptools to start looking in the root directory

# EXPLICIT INCLUSION: Only bundle these specific folders as your application packages
include = [
    "app*", 
    "frontend*"
]

# EXPLICIT EXCLUSION: Never attempt to bundle tests, virtual environments, or old folders
exclude = [
    "tests*", 
    "venv*", 
    ".venv*", 
    "fastapi*",       # Adding your old folder name just in case it's still hanging around
    "triage_agent*"   # Adding your old folder name just in case
]